<resources>
    <string name="app_name">DaNangTravel</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="btn_tourist_attraction">Vui chơi</string>
    <string name="tv_more">Xem thêm</string>
    <string name="tv_top_place">Top Địa điểm nổi tiếng</string>
    <string name="tv_top_restaurant">Top Địa điểm ăn uống </string>
    <string name="tv_top_hotel">Top Khách sạn </string>
    <string name="tv_comment">Đánh giá</string>
    <string name="tv_num_comment">3</string>
    <string name="tv_content_introduce_danang">     Đà Nẵng là một thành phố tuyệt đẹp và văn minh - Một thành phố trẻ rất năng động và phát triển từng ngày, các dịch vụ du lịch Đà Nẵng và hạ tầng du lịch Đà Nẵng phát triển mạnh mẽ đang thu hút khách du lịch đến ngày một đông hơn. </string>
    <string name="tv_introduce_danang">Giới thiệu về Đà Nẵng</string>
    <string name="tv_preview">Giới thiệu</string>
    <string name="tv_about_us">Design and develop by PhongLe</string>
    <string name="tv_introduce_place">Với vị trí nằm bắc qua sông Hàn, cầu Rồng được xem là biểu tượng của thành phố Đà Nẵng và được rất nhiều du khách gần xa biết đến như là “Đà Nẵng các địa điểm du lịch ưa thích”. Chiếc cầu được xây dựng theo kiểu kiến trúc vừa mang hình dạng một con Rồng thời Lý vừa như vươn mình bay ra biển lớn, thể hiện khát vọng ngày càng phát triển lớn mạnh của Đà Nẵng. Điểm đặc biệt nổi bật của cầu Rồng là có đến 6 làn xe chạy, trong đó chiều rộng cầu là 37,5m còn chiều dài lên đến 666m với thiết kế độc đáo, hoành tráng mang tầm vóc quốc tế và kinh phí để xây dựng cầu là 1,5 nghìn tỷ đồng.</string>
    <string name="tv_dragon_brigde">Dragon Brigde</string>
    <string name="tv_info_place">Thông tin liên lạc</string>
    <string name="tv_address_place">58 Nguyễn Lương Bằng, Đà Nẵng</string>
    <string name="tv_phone_place">0986759342</string>
    <string name="tv_place_name">Dragon Brigde</string>
    <string name="tv_rate_comment">Đánh giá và bình luận</string>
    <string name="tv_username">Phong Lê Thanh</string>
    <string name="tv_preview_place">Cầu Rồng giống như một viên ngọc lấp lánh cùng với những cây cầu khác tạo nên vẻ đẹp độc đáo cho Đà Nẵng khi đêm về.</string>
    <string name="tv_detail_comment">Cây cầu có kiến trúc tuyệt vời. Một công trình kĩ vỹ bắc qua Sông Hàn thơ mộng. very beautiful !!!</string>
    <string name="tv_danang">Đà Nẵng</string>
    <string name="tv_sign_up">Create new account</string>
    <string name="tv_welcome">Welcome to DaNangTravel</string>
    <string name="btn_login">Login</string>
    <string name="edt_username">Username</string>
    <string name="edt_password">Password</string>
    <string name="edt_email">Email</string>
    <string name="btn_signup">Sign up</string>
    <string name="or">or</string>
    <string name="tv_welcome_login">Welcome to DaNangTravel</string>
    <string name="btn_cancel">Huỷ</string>
    <string name="btn_comment">Bình luận</string>
    <string name="edt_input_comment">Nhập bình luận</string>
    <string name="alert_require_login_title">Yêu cầu đăng nhập ! </string>
    <string name="alert_confirm_logout_title">Xác nhận đăng xuất ! </string>
    <string name="alert_require_login">Bạn chưa đăng nhập vào hệ thống, vui lòng đăng nhập để bình luận !</string>
    <string name="alert_confirm_logout">Bạn có chắc chắn muốn đăng xuất ra khỏi hệ thống !</string>
    <string name="tv_all_category">Tất cả</string>
    <string name="tv_unit_distance">km</string>
    <string name="tv_cost">Giá:</string>
    <string name="tv_hot_event">Sự kiện nổi bật</string>
    <string name="tv_time_start">2018-05-30</string>
    <string name="tv_time_finish">2018-06-15</string>
    <string name="tv_icon_to">---</string>
    <string name="tv_event_name">Lễ hội pháo hoa Quốc tế</string>
    <string name="tv_description_event">Lễ hội pháo hoa quốc tế được tổ chức 2 năm một lần tại thành phố biển xinh đẹp Đà Nẵng...</string>
    <string name="tv_address_event">Cau song han da nang</string>
    <string name="btn_search_near_event">Xem địa điểm gần sự kiện này</string>
    <string name="tv_address_title">Địa chỉ :</string>
    <string name="tv_numlike_event">1</string>
    <string name="btn_detail">Xem chi tiết</string>
    <string name="tv_distance">10000</string>
</resources>
