<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="230dp">

        <ImageView
            android:id="@+id/imgDetailEvent"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_default" />

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarDetailEvent"
            popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="35dp"
                    android:layout_height="30dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_back"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/imgLike"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/selector_img_like" />
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_event_name"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/tv_time_start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/tv_icon_to" />

            <TextView
                android:id="@+id/tvTimeFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:text="@string/tv_time_finish" />

            <TextView
                android:id="@+id/tvNumLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="3dp"
                android:layout_marginStart="10dp"
                android:text="1" />

            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart_check" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Địa chỉ :"
                android:textColor="@color/blue_facebook"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/tvAddressEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/tv_address_event" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/tv_preview"
            android:textColor="@color/blue_facebook"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvDetailEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_description_event" />

        <Button
            android:id="@+id/btnSearchNearEvent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/btn_search_near_event"
            android:textColor="@color/snow" />
    </LinearLayout>


</LinearLayout>
