<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="210dp"
    android:layout_marginBottom="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="3dp">

    <LinearLayout
        android:id="@+id/llItemEvent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imgTopEvent"
            android:layout_width="210dp"
            android:layout_height="110dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_default" />

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_event_name"
            android:textColor="@color/red"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeStart"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/tv_time_start" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/tv_icon_to" />

            <TextView
                android:id="@+id/tvTimeFinish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_time_finish"
                android:textSize="12sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/tvNumLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp" />
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart_check"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
