<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/snow"
    android:gravity="center"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="20dp">

    <RatingBar
        android:id="@+id/evaluate"
        style="?android:attr/ratingBarStyleIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:isIndicator="false"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edt_input_comment" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDialogCancel"
            style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/btn_cancel"
            android:textColor="@color/blue_theme" />

        <Button
            android:id="@+id/btnDialogComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/blue_theme"
            android:text="@string/btn_comment"
            android:textColor="@color/snow" />
    </LinearLayout>
</LinearLayout>
