<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_info_place"
            android:textSize="17sp"
            android:textStyle="bold"
            android:textColor="@color/title_color"/>

        <ImageView
            android:id="@+id/imgMapPlace"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_map"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_address" />

            <TextView
                android:id="@+id/tvAddressPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_address_place" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_phone" />

            <TextView
                android:id="@+id/tvPhonePlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_phone_place" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>